--- a/public/views/course/course-edit/templates/learningaims-list.view.client.html
+++ b/public/views/course/course-edit/templates/learningaims-list.view.client.html
@@ -55,7 +55,7 @@
                         <div class="col-xs-10">
                             <input  class="form-control"
                                     value="Make REAL web applications using cutting-edge technologies"
-                                    ng-model="model.getlearningAims[0]"
+                                    ng-model="model.learningAims"
                                     type= "text">
                             </input>
                         </div>
@@ -82,7 +82,7 @@
                         <div class="col-xs-10">
                             <input class="form-control"
                                    value="Make REAL web applications using cutting-edge technologies"
-                                   ng-model="model.courses.learningAims[0]"
+                                   ng-model="model.learningAims"
                                    type="text">
                             </input>
                         </div>
@@ -105,7 +105,7 @@
                         <div class="col-xs-10">
                             <input class="form-control"
                                    value="Make REAL web applications using cutting-edge technologies"
-                                   ng-model="model.courses.learningAims[0]"
+                                   ng-model="model.learningAims"
                                    type="text">
                             </input>
                         </div>
@@ -128,7 +128,7 @@
                         <div class="col-xs-10">
                             <input class="form-control"
                                    value="Make REAL web applications using cutting-edge technologies"
-                                   ng-model="model.courses.learningAims[0]"
+                                   ng-model="model.learningAims"
                                    type="text">
                             </input>
                         </div>
@@ -151,7 +151,7 @@
                         <div class="col-xs-10">
                             <input class="form-control"
                                    value="Make REAL web applications using cutting-edge technologies"
-                                   ng-model="getlearningAims[4]"
+                                   ng-model="learningAims"
                                    placeholder="Make REAL web applications using cutting-edge technologies"
                                    type="text">
                             </input>
