--- a/public/views/course/course-edit/templates/requirements-list.view.client.html
+++ b/public/views/course/course-edit/templates/requirements-list.view.client.html
@@ -25,91 +25,22 @@
     <div class="row">
         <div class="col-md-4 hidden-sm hidden-xs website-new-column website-new-border">
             <ul class="list-group">
-                <li class="list-group-item boarder-none">
+                <li class="list-group-item boarder-none"
+                    ng-repeat="list in model.lists">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="general.html">
-                                General
+                            <a href="#/instructor/:instructorId/course/:courseId/general">
+                                {{list}}
                             </a>
                         </div>
                         <div class="col-xs-1">
-                            <a href="general.html">
+                            <a href="#!/general">
                                 <span class="glyphicon glyphicon-cog pull-right"></span>
                             </a>
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="learningaims.html">
-                                Learning Aims
-                            </a>
-                        </div>
 
-                        <div class="col-xs-1">
-                            <a href="learningaims.html">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="requirements.html">
-                                Requirement
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="requirements.html">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="#">
-                                Curriculum
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="#">
-                                Instructor
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="#">
-                                Reviews
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
             </ul>
         </div>
 
@@ -123,7 +54,9 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Have a computer with Internet" type="class">
+                                   value="Have a computer with Internet"
+                                   ng-model="model."
+                                   type="text">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -144,7 +77,9 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Be ready to learn an insane amount of awesome stuff" type="class">
+                                   value="Be ready to learn an insane amount of awesome stuff"
+                                   ng-model="model.requirements"
+                                   type="text">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -165,7 +100,9 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="Prepare to build real web apps!" type="class">
+                                   value="Prepare to build real web apps!"
+                                   ng-model="model.requirements"
+                                   type="text">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -187,7 +124,8 @@
                         <div class="col-xs-10">
                             <input class="form-control"
                                    value="Brace yourself for stupid jokes about my dog Rusty"
-                                   type="class">
+                                   ng-model="model.requirements"
+                                   type="text">
                             </input>
                         </div>
                         <div class="col-xs-1">
@@ -208,7 +146,8 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   type="class"
+                                   type="text"
+                                   ng-model="model.requirements"
                                    placeholder="Please add new requirement for this course">
                             </input>
                         </div>
