--- a/public/views/course/course-edit/template/curriculum.instructor.view.client.html
+++ b/public/views/course/course-edit/template/curriculum.instructor.view.client.html
@@ -28,7 +28,7 @@
                     ng-repeat="list in model.lists">
                     <div class="row">
                         <div class="col-xs-10">
-                            <a href="../general.html">
+                            <a href="#!/instructor/{{model.instructorId}}/course/{{model.courseId}}/{{list}}">
                                 {{list}}
                             </a>
                         </div>
